Add Dream hierarchy

--- a/pom.xml
+++ b/pom.xml
@@ -123,12 +123,12 @@
 		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-ehcache -->
 
 
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
-			<groupId>postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>9.1-901.jdbc4</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.40</version>
 		</dependency>
-
 
 
 		<!-- SLF4J logging configuration -->
@@ -147,7 +147,7 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.21</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
