--- a/src/main/resources/globels.properties
+++ b/src/main/resources/globels.properties
@@ -1,12 +1,12 @@
 ######################################
 ######### DATABASE PROPERTIES ########
 ######################################
-jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://85.143.209.57:5432/test
-jdbc.username=test_user
-jdbc.password=test_user
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/app
+jdbc.username=root
+jdbc.password=root
 
-hibernate.DialectClass=org.hibernate.dialect.PostgreSQL94Dialect
+hibernate.DialectClass=org.hibernate.dialect.MySQLInnoDBDialect
 hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.generate_statistics=true
