--- a/src/main/resources/globels.properties
+++ b/src/main/resources/globels.properties
@@ -1,10 +1,10 @@
 ######################################
 ######### DATABASE PROPERTIES ########
 ######################################
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/app
-jdbc.username=root
-jdbc.password=root
+jdbc.driverClassName=org.postgresql.Driver
+jdbc.url=jdbc:postgresql://postgresql.9175936936.myjino.ru:5432/9175936936_flybro
+jdbc.username=9175936936_flybro
+jdbc.password=flybro1
 
 hibernate.DialectClass=org.hibernate.dialect.MySQLInnoDBDialect
 hibernate.show_sql=true
