--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,14 @@
             <artifactId>telegrambots</artifactId>
             <version>2.4.4.5</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>hms</finalName>
