--- a/src/main/resources/globels.properties
+++ b/src/main/resources/globels.properties
@@ -6,7 +6,7 @@ jdbc.url=jdbc:postgresql://postgresql.9175936936.myjino.ru:5432/9175936936_flybr
 jdbc.username=9175936936_flybro
 jdbc.password=flybro1
 
-hibernate.DialectClass=org.hibernate.dialect.MySQLInnoDBDialect
+hibernate.DialectClass=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.generate_statistics=true
